# plit

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  VERSION  docker-compose.yml  install.sh
.github/workflows/: ci.yml  regenerate-client.yml  release.yml
docker/: entrypoint.sh
docs/: CNAME  index.html
e2e/: api-client.sh
pipelit-client/: Cargo.toml  README.md
pipelit-client/docs/: ApiKeyCreateIn.md  ApiKeyCreatedOut.md  ApiKeyOut.md  AuthApi.md  BatchDeleteCheckpointsIn.md  BatchDeleteCredentialsIn.md  BatchDeleteEpicsIn.md  BatchDeleteEpisodesIn.md  BatchDeleteExecutionsIn.md  BatchDeleteFactsIn.md  BatchDeleteProceduresIn.md  BatchDeleteSchedulesIn.md  BatchDeleteTasksIn.md  BatchDeleteUsersIn.md  BatchDeleteWorkflowsIn.md  BatchDeleteWorkspacesIn.md  CapabilitiesInfo.md  ChatApi.md  ChatMessageIn.md  ChatMessageOut.md  ComponentConfigData.md  CredentialIn.md  CredentialModelOut.md  CredentialOut.md  CredentialTestOut.md  CredentialUpdate.md  CredentialsApi.md  DefaultApi.md  Detail.md  EdgeIn.md  EdgeOut.md  EdgeUpdate.md  EdgesApi.md  EnvironmentInfo.md  EpicCreate.md  EpicOut.md  EpicUpdate.md  EpicsApi.md  ExecutionDetailOut.md  ExecutionLogOut.md  (+58 more)
pipelit-client/src/apis/: auth_api.rs  chat_api.rs  configuration.rs  credentials_api.rs  default_api.rs  epics_api.rs  executions_api.rs  inbound_api.rs  (+10 more)
scripts/: generate-client.sh
src/: client.rs  gw_main.rs  main.rs  output.rs  tui_main.rs
src/commands/: auth.rs  chat.rs  credentials.rs  health.rs  listen.rs  mod.rs  send.rs  start.rs  stop.rs  uninstall.rs
(+91 files in other folders)
