[package]
name = "plit"
version = "0.3.1"
edition = "2024"
description = "Pipelit ecosystem CLI and gateway — install, start, and chat with AI agents"
license = "Apache-2.0"
repository = "https://github.com/theuselessai/plit"
keywords = ["ai", "agent", "gateway", "pipelit", "cli"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "plit"
path = "src/main.rs"

[[bin]]
name = "plit-gw"
path = "src/gw_main.rs"

[dependencies]
# Gateway server
plit-gw = "0.3.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# HTTP client (rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket client
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
url = "2"

# Init command
dialoguer = "0.11"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
genai = "0.6.0-beta.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
